<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edittext"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="610dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter"
        android:textAlignment="textEnd"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/edittext" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/edittext" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_a"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/edittext" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_s"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_9"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button12"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_m"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button13"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="275dp"
        android:text="@string/_dot"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button14"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="275dp"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button15"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="275dp"
        android:text="@string/_e"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button16"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="275dp"
        android:text="@string/_d"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="50dp"
        android:text="@string/c"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext"
        app:layout_constraintVertical_bias="0.477" />

</androidx.constraintlayout.widget.ConstraintLayout>